<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_plugin_name">FBReader plugin Booquotter, version 0.1 alpha</string>
	<string name="app_plugin_copyright_year">Copyright © 2014</string>
	<string name="app_plugin_copyright_person">Borys Tymchenko, Bogdan Horbeshko</string>
	<string name="app_plugin_view_help">View help</string>
    <string name="app_name">Booquotter</string>
    <string name="app_post_facebook">Post to FB</string>
    <string name="app_post_twitter">Tweet</string>
    
    <string name="twitter_login_cancelled">Twitter login unsuccessful</string>
    <string name="twitter_logged_out">Logged out from Twitter</string>
    <string name="twitter_not_logged_out">Unfortunately, cannot log out from Twitter</string>
    <string name="twitter_login_successful">You\'ve successfully logged in\nwith Twitter</string>
    <string name="twitter_signin_successful">You\'ve successfully signed in\nwith Twitter</string>
    <string name="twitter_already_logged_in">You\'re already logged in with Twitter</string>
    <string name="twitter_tweet_successful">Successfully posted into your Twitter timeline</string>
    <string name="twitter_tweet_unauthorized">Server returned code 401\nTry to relogin</string>
    <string name="twitter_tweet_login_failed">Your credentials are incorrect\nTry to relogin</string>
    <string name="twitter_tweet_duplicate">Status is a duplicate.</string>
    
    <string name="twitter_login_button">Log in with Twitter</string>
    <string name="facebook_app_id">317236605127445</string>
    <string name="facebook_dev_hash">XMHVlzaq78trceyxTm/IYBV1A0U=</string>
    <string name="facebook_login_cancelled">Facebook login unsuccessful</string>
    <string name="facebook_logged_out">Logged out from Facebook</string>
    <string name="facebook_not_logged_out">Unfortunately, cannot log out from Facebook</string>
    <string name="facebook_login_successful">You\'ve successfully logged in\nwith Facebook</string>
    <string name="facebook_signin_successful">You\'ve successfully signed in with Facebook</string>
    <string name="facebook_unauthorized">Your Facebook login/password is incorrect\nTry to relogin</string>
    <string name="facebook_already_logged_in">You\'re already logged in\nwith Facebook</string>
    <string name="facebook_post_successful">Successfully posted into your Facebook timeline</string>
    <string name="facebook_login_button">Log in with Facebook</string>
    <string name="logout_button">Log out</string>
    <string name="action_settings">Settings</string>
    
    <string name="fbreader_button_launch">Launch FBReader</string>
    <string name="fbreader_package">org.geometerplus.zlibrary.ui.android</string>
    <string name="fbreader_api_exception">Interaction with FBReader failed.\nTry to restart FBReader and Booquotter.</string>
    
    <string name="post_now_reading_start">I\'m reading now the book \"</string>
    <string name="post_now_reading_end">\" with Booquotter app.</string>
    
    <string name="title_activity_startup">Booquotter 0.1 alpha</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_dummy"></string>


</resources>
