<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.spsancti.booquotter.ui.StartupActivity" >

    <LinearLayout
        android:id="@+id/infoLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/vtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_plugin_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/ncopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_plugin_copyright_year" />
        
        <TextView
            android:id="@+id/pcopyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_plugin_copyright_person" />
    </LinearLayout>

    <Button
        android:id="@+id/pbStartReading"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/infoLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="139dp"
        android:onClick="onClick"
        android:text="@string/fbreader_button_launch" />

    <Button
        android:id="@+id/view_help"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pbStartReading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/app_plugin_view_help" />

</RelativeLayout>